parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INT

Grammar

Rule 0     S' -> input
Rule 1     input -> <empty>
Rule 2     input -> command input
Rule 3     command -> COMMENT
Rule 4     SYMBOL -> XYZ
Rule 5     SYMBOL -> ID
Rule 6     TEXT -> SYMBOL
Rule 7     TEXT -> STRING
Rule 8     NUMBER -> DOUBLE
Rule 9     command -> POP
Rule 10    command -> PUSH
Rule 11    command -> SCREEN NUMBER NUMBER
Rule 12    command -> SCREEN
Rule 13    command -> SAVE TEXT TEXT
Rule 14    command -> DISPLAY
Rule 15    command -> SPHERE NUMBER NUMBER NUMBER NUMBER
Rule 16    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 17    command -> SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 18    command -> SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 19    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 20    command -> TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 21    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 22    command -> TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 23    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 24    command -> BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 25    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 26    command -> BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 27    command -> CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 28    command -> CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 29    command -> CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 30    command -> CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 31    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 32    command -> LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 33    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 34    command -> LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 35    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 36    command -> LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
Rule 37    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
Rule 38    command -> LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
Rule 39    command -> MOVE NUMBER NUMBER NUMBER SYMBOL
Rule 40    command -> MOVE NUMBER NUMBER NUMBER
Rule 41    command -> SCALE NUMBER NUMBER NUMBER SYMBOL
Rule 42    command -> SCALE NUMBER NUMBER NUMBER
Rule 43    command -> ROTATE XYZ NUMBER SYMBOL
Rule 44    command -> ROTATE XYZ NUMBER
Rule 45    command -> FRAMES NUMBER
Rule 46    command -> BASENAME TEXT
Rule 47    command -> VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
Rule 48    command -> SET SYMBOL NUMBER
Rule 49    command -> SET_KNOBS NUMBER
Rule 50    command -> AMBIENT NUMBER NUMBER NUMBER
Rule 51    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 52    command -> CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 53    command -> LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 54    command -> SHADING SHADING_TYPE
Rule 55    command -> CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
Rule 56    command -> GENERATE_RAYFILES
Rule 57    command -> MESH CO TEXT
Rule 58    command -> MESH SYMBOL CO TEXT
Rule 59    command -> MESH CO TEXT SYMBOL
Rule 60    command -> MESH SYMBOL CO TEXT SYMBOL
Rule 61    command -> SAVE_KNOBS SYMBOL
Rule 62    command -> SAVE_COORDS SYMBOL
Rule 63    command -> TWEEN NUMBER NUMBER SYMBOL SYMBOL
Rule 64    command -> FOCAL NUMBER
Rule 65    command -> WEB
Rule 66    command -> TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

Terminals, with rules where they appear

AMBIENT              : 50
BASENAME             : 46
BOX                  : 23 24 25 26
CAMERA               : 55
CO                   : 57 58 59 60
COMMENT              : 3
CONSTANTS            : 51 52
CYLINDER             : 27 28 29 30
DISPLAY              : 14
DOUBLE               : 8
FOCAL                : 64
FRAMES               : 45
GENERATE_RAYFILES    : 56
ID                   : 5
INT                  : 
LIGHT                : 53
LINE                 : 31 32 33 34 35 36 37 38
MESH                 : 57 58 59 60
MOVE                 : 39 40
POP                  : 9
PUSH                 : 10
ROTATE               : 43 44
SAVE                 : 13
SAVE_COORDS          : 62
SAVE_KNOBS           : 61
SCALE                : 41 42
SCREEN               : 11 12
SET                  : 48
SET_KNOBS            : 49
SHADING              : 54
SHADING_TYPE         : 54
SPHERE               : 15 16 17 18
STRING               : 7
TEXTURE              : 66
TORUS                : 19 20 21 22
TWEEN                : 63
VARY                 : 47
WEB                  : 65
XYZ                  : 4 43 44
error                : 

Nonterminals, with rules where they appear

NUMBER               : 11 11 15 15 15 15 16 16 16 16 17 17 17 17 18 18 18 18 19 19 19 19 19 20 20 20 20 20 21 21 21 21 21 22 22 22 22 22 23 23 23 23 23 23 24 24 24 24 24 24 25 25 25 25 25 25 26 26 26 26 26 26 27 27 27 27 27 28 28 28 28 28 29 29 29 29 29 30 30 30 30 30 31 31 31 31 31 31 32 32 32 32 32 32 33 33 33 33 33 33 34 34 34 34 34 34 35 35 35 35 35 35 36 36 36 36 36 36 37 37 37 37 37 37 38 38 38 38 38 38 39 39 39 40 40 40 41 41 41 42 42 42 43 44 45 47 47 47 47 48 49 50 50 50 51 51 51 51 51 51 51 51 51 52 52 52 52 52 52 52 52 52 52 52 52 53 53 53 53 53 53 55 55 55 55 55 55 63 63 64 66 66 66 66 66 66 66 66 66 66 66 66
SYMBOL               : 6 16 17 18 18 20 21 22 22 24 25 26 26 28 29 30 30 32 33 34 34 35 36 36 37 37 38 38 38 39 41 43 47 48 51 52 53 58 59 60 60 61 62 63 63 66
TEXT                 : 13 13 46 57 58 59 60
command              : 2
input                : 2 0

Parsing method: LALR

state 0

    (0) S' -> . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (34) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (38) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (39) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (40) command -> . MOVE NUMBER NUMBER NUMBER
    (41) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (42) command -> . SCALE NUMBER NUMBER NUMBER
    (43) command -> . ROTATE XYZ NUMBER SYMBOL
    (44) command -> . ROTATE XYZ NUMBER
    (45) command -> . FRAMES NUMBER
    (46) command -> . BASENAME TEXT
    (47) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (48) command -> . SET SYMBOL NUMBER
    (49) command -> . SET_KNOBS NUMBER
    (50) command -> . AMBIENT NUMBER NUMBER NUMBER
    (51) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (52) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (53) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (54) command -> . SHADING SHADING_TYPE
    (55) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (56) command -> . GENERATE_RAYFILES
    (57) command -> . MESH CO TEXT
    (58) command -> . MESH SYMBOL CO TEXT
    (59) command -> . MESH CO TEXT SYMBOL
    (60) command -> . MESH SYMBOL CO TEXT SYMBOL
    (61) command -> . SAVE_KNOBS SYMBOL
    (62) command -> . SAVE_COORDS SYMBOL
    (63) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (64) command -> . FOCAL NUMBER
    (65) command -> . WEB
    (66) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    POP             shift and go to state 4
    PUSH            shift and go to state 5
    SCREEN          shift and go to state 6
    SAVE            shift and go to state 7
    DISPLAY         shift and go to state 8
    SPHERE          shift and go to state 9
    TORUS           shift and go to state 10
    BOX             shift and go to state 11
    CYLINDER        shift and go to state 12
    LINE            shift and go to state 13
    MOVE            shift and go to state 14
    SCALE           shift and go to state 15
    ROTATE          shift and go to state 16
    FRAMES          shift and go to state 17
    BASENAME        shift and go to state 18
    VARY            shift and go to state 19
    SET             shift and go to state 20
    SET_KNOBS       shift and go to state 21
    AMBIENT         shift and go to state 22
    CONSTANTS       shift and go to state 23
    LIGHT           shift and go to state 24
    SHADING         shift and go to state 25
    CAMERA          shift and go to state 26
    GENERATE_RAYFILES shift and go to state 27
    MESH            shift and go to state 28
    SAVE_KNOBS      shift and go to state 29
    SAVE_COORDS     shift and go to state 30
    TWEEN           shift and go to state 31
    FOCAL           shift and go to state 32
    WEB             shift and go to state 33
    TEXTURE         shift and go to state 34

    input                          shift and go to state 1
    command                        shift and go to state 2

state 1

    (0) S' -> input .



state 2

    (2) input -> command . input
    (1) input -> .
    (2) input -> . command input
    (3) command -> . COMMENT
    (9) command -> . POP
    (10) command -> . PUSH
    (11) command -> . SCREEN NUMBER NUMBER
    (12) command -> . SCREEN
    (13) command -> . SAVE TEXT TEXT
    (14) command -> . DISPLAY
    (15) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER
    (16) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> . SPHERE NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> . SPHERE SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (19) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> . TORUS NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> . TORUS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (23) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> . BOX NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> . BOX SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (27) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> . CYLINDER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> . CYLINDER SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (31) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (32) command -> . LINE NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (33) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (34) command -> . LINE NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (35) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (36) command -> . LINE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (37) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER
    (38) command -> . LINE SYMBOL NUMBER NUMBER NUMBER SYMBOL NUMBER NUMBER NUMBER SYMBOL
    (39) command -> . MOVE NUMBER NUMBER NUMBER SYMBOL
    (40) command -> . MOVE NUMBER NUMBER NUMBER
    (41) command -> . SCALE NUMBER NUMBER NUMBER SYMBOL
    (42) command -> . SCALE NUMBER NUMBER NUMBER
    (43) command -> . ROTATE XYZ NUMBER SYMBOL
    (44) command -> . ROTATE XYZ NUMBER
    (45) command -> . FRAMES NUMBER
    (46) command -> . BASENAME TEXT
    (47) command -> . VARY SYMBOL NUMBER NUMBER NUMBER NUMBER
    (48) command -> . SET SYMBOL NUMBER
    (49) command -> . SET_KNOBS NUMBER
    (50) command -> . AMBIENT NUMBER NUMBER NUMBER
    (51) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (52) command -> . CONSTANTS SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (53) command -> . LIGHT SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (54) command -> . SHADING SHADING_TYPE
    (55) command -> . CAMERA NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (56) command -> . GENERATE_RAYFILES
    (57) command -> . MESH CO TEXT
    (58) command -> . MESH SYMBOL CO TEXT
    (59) command -> . MESH CO TEXT SYMBOL
    (60) command -> . MESH SYMBOL CO TEXT SYMBOL
    (61) command -> . SAVE_KNOBS SYMBOL
    (62) command -> . SAVE_COORDS SYMBOL
    (63) command -> . TWEEN NUMBER NUMBER SYMBOL SYMBOL
    (64) command -> . FOCAL NUMBER
    (65) command -> . WEB
    (66) command -> . TEXTURE SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER

    $end            reduce using rule 1 (input -> .)
    COMMENT         shift and go to state 3
    POP             shift and go to state 4
    PUSH            shift and go to state 5
    SCREEN          shift and go to state 6
    SAVE            shift and go to state 7
    DISPLAY         shift and go to state 8
    SPHERE          shift and go to state 9
    TORUS           shift and go to state 10
    BOX             shift and go to state 11
    CYLINDER        shift and go to state 12
    LINE            shift and go to state 13
    MOVE            shift and go to state 14
    SCALE           shift and go to state 15
    ROTATE          shift and go to state 16
    FRAMES          shift and go to state 17
    BASENAME        shift and go to state 18
    VARY            shift and go to state 19
    SET             shift and go to state 20
    SET_KNOBS       shift and go to state 21
    AMBIENT         shift and go to state 22
    CONSTANTS       shift and go to state 23
    LIGHT           shift and go to state 24
    SHADING         shift and go to state 25
    CAMERA          shift and go to state 26
    GENERATE_RAYFILES shift and go to state 27
    MESH            shift and go to state 28
    SAVE_KNOBS      shift and go to state 29
    SAVE_COORDS     shift and go to state 30
    TWEEN           shift and go to state 31
    FOCAL           shift and go to state 32
    WEB             shift and go to state 33
    TEXTURE         shift and go to state 34

    command                        shift and go to state 2
    input                          shift and go to state 35

state 3

    (3) command -> COMMENT .

    COMMENT         reduce using rule 3 (command -> COMMENT .)
    POP             reduce using rule 3 (command -> COMMENT .)
    PUSH            reduce using rule 3 (command -> COMMENT .)
    SCREEN          reduce using rule 3 (command -> COMMENT .)
    SAVE            reduce using rule 3 (command -> COMMENT .)
    DISPLAY         reduce using rule 3 (command -> COMMENT .)
    SPHERE          reduce using rule 3 (command -> COMMENT .)
    TORUS           reduce using rule 3 (command -> COMMENT .)
    BOX             reduce using rule 3 (command -> COMMENT .)
    CYLINDER        reduce using rule 3 (command -> COMMENT .)
    LINE            reduce using rule 3 (command -> COMMENT .)
    MOVE            reduce using rule 3 (command -> COMMENT .)
    SCALE           reduce using rule 3 (command -> COMMENT .)
    ROTATE          reduce using rule 3 (command -> COMMENT .)
    FRAMES          reduce using rule 3 (command -> COMMENT .)
    BASENAME        reduce using rule 3 (command -> COMMENT .)
    VARY            reduce using rule 3 (command -> COMMENT .)
    SET             reduce using rule 3 (command -> COMMENT .)
    SET_KNOBS       reduce using rule 3 (command -> COMMENT .)
    AMBIENT         reduce using rule 3 (command -> COMMENT .)
    CONSTANTS       reduce using rule 3 (command -> COMMENT .)
    LIGHT           reduce using rule 3 (command -> COMMENT .)
    SHADING         reduce using rule 3 (command -> COMMENT .)
    CAMERA          reduce using rule 3 (command -> COMMENT .)
    GENERATE_RAYFILES reduce using rule 3 (command -> COMMENT .)
    MESH            reduce using rule 3 (command -> COMMENT .)
    SAVE_KNOBS      reduce using rule 3 (command -> COMMENT .)
    SAVE_COORDS     reduce using rule 3 (command -> COMMENT .)
    TWEEN           reduce using rule 3 (command -> COMMENT .)
    FOCAL           reduce using rule 3 (command -> COMMENT .)
    WEB             reduce using rule 3 (command -> COMMENT .)
    TEXTURE         reduce using rule 3 (command -> COMMENT .)
    $end            reduce using rule 3 (command -> COMMENT .)


state 4

    (9) command -> POP .

    COMMENT         reduce using rule 9 (command -> POP .)
    POP             reduce using rule 9 (command -> POP .)
    PUSH            reduce using rule 9 (command -> POP .)
    SCREEN          reduce using rule 9 (command -> POP .)
    SAVE            reduce using rule 9 (command -> POP .)
    DISPLAY         reduce using rule 9 (command -> POP .)
    SPHERE          reduce using rule 9 (command -> POP .)
    TORUS           reduce using rule 9 (command -> POP .)
    BOX             reduce using rule 9 (command -> POP .)
    CYLINDER        reduce using rule 9 (command -> POP .)
    LINE            reduce using rule 9 (command -> POP .)
    MOVE            reduce using rule 9 (command -> POP .)
    SCALE           reduce using rule 9 (command -> POP .)
    ROTATE          reduce using rule 9 (command -> POP .)
    FRAMES          reduce using rule 9 (command -> POP .)
    BASENAME        reduce using rule 9 (command -> POP .)
    VARY            reduce using rule 9 (command -> POP .)
    SET             reduce using rule 9 (command -> POP .)
    SET_KNOBS       reduce using rule 9 (command -> POP .)
    AMBIENT         reduce using rule 9 (command -> POP .)
    CONSTANTS       reduce using rule 9 (command -> POP .)
    LIGHT           reduce using rule 9 (command -> POP .)
    SHADING         reduce using rule 9 (command -> POP .)
    CAMERA          reduce using rule 9 (command -> POP .)
    GENERATE_RAYFILES reduce using rule 9 (command -> POP .)
    MESH            reduce using rule 9 (command -> POP .)
    SAVE_KNOBS      reduce using rule 9 (command -> POP .)
    SAVE_COORDS     reduce using rule 9 (command -> POP .)
    TWEEN           reduce using rule 9 (command -> POP .)
    FOCAL           reduce using rule 9 (command -> POP .)
    WEB             reduce using rule 9 (command -> POP .)
    TEXTURE         reduce using rule 9 (command -> POP .)
    $end            reduce using rule 9 (command -> POP .)


state 5

    (10) command -> PUSH .

    COMMENT         reduce using rule 10 (command -> PUSH .)
    POP             reduce using rule 10 (command -> PUSH .)
    PUSH            reduce using rule 10 (command -> PUSH .)
    SCREEN          reduce using rule 10 (command -> PUSH .)
    SAVE            reduce using rule 10 (command -> PUSH .)
    DISPLAY         reduce using rule 10 (command -> PUSH .)
    SPHERE          reduce using rule 10 (command -> PUSH .)
    TORUS           reduce using rule 10 (command -> PUSH .)
    BOX             reduce using rule 10 (command -> PUSH .)
    CYLINDER        reduce using rule 10 (command -> PUSH .)
    LINE            reduce using rule 10 (command -> PUSH .)
    MOVE            reduce using rule 10 (command -> PUSH .)
    SCALE           reduce using rule 10 (command -> PUSH .)
    ROTATE          reduce using rule 10 (command -> PUSH .)
    FRAMES          reduce using rule 10 (command -> PUSH .)
    BASENAME        reduce using rule 10 (command -> PUSH .)
    VARY            reduce using rule 10 (command -> PUSH .)
    SET             reduce using rule 10 (command -> PUSH .)
    SET_KNOBS       reduce using rule 10 (command -> PUSH .)
    AMBIENT         reduce using rule 10 (command -> PUSH .)
    CONSTANTS       reduce using rule 10 (command -> PUSH .)
    LIGHT           reduce using rule 10 (command -> PUSH .)
    SHADING         reduce using rule 10 (command -> PUSH .)
    CAMERA          reduce using rule 10 (command -> PUSH .)
    GENERATE_RAYFILES reduce using rule 10 (command -> PUSH .)
    MESH            reduce using rule 10 (command -> PUSH .)
    SAVE_KNOBS      reduce using rule 10 (command -> PUSH .)
    SAVE_COORDS     reduce using rule 10 (command -> PUSH .)
    TWEEN           reduce using rule 10 (command -> PUSH .)
    FOCAL           reduce using rule 10 (command -> PUSH .)
    WEB             reduce using rule 10 (command -> PUSH .)
    TEXTURE         reduce using rule 10 (command -> PUSH .)
    $end            reduce using rule 10 (command -> PUSH .)


state 6

    (11) command -> SCREEN . NUMBER NUMBER
    (12) command -> SCREEN .
    (8) NUMBER -> . DOUBLE

    COMMENT         reduce using rule 12 (command -> SCREEN .)
    POP             reduce using rule 12 (command -> SCREEN .)
    PUSH            reduce using rule 12 (command -> SCREEN .)
    SCREEN          reduce using rule 12 (command -> SCREEN .)
    SAVE            reduce using rule 12 (command -> SCREEN .)
    DISPLAY         reduce using rule 12 (command -> SCREEN .)
    SPHERE          reduce using rule 12 (command -> SCREEN .)
    TORUS           reduce using rule 12 (command -> SCREEN .)
    BOX             reduce using rule 12 (command -> SCREEN .)
    CYLINDER        reduce using rule 12 (command -> SCREEN .)
    LINE            reduce using rule 12 (command -> SCREEN .)
    MOVE            reduce using rule 12 (command -> SCREEN .)
    SCALE           reduce using rule 12 (command -> SCREEN .)
    ROTATE          reduce using rule 12 (command -> SCREEN .)
    FRAMES          reduce using rule 12 (command -> SCREEN .)
    BASENAME        reduce using rule 12 (command -> SCREEN .)
    VARY            reduce using rule 12 (command -> SCREEN .)
    SET             reduce using rule 12 (command -> SCREEN .)
    SET_KNOBS       reduce using rule 12 (command -> SCREEN .)
    AMBIENT         reduce using rule 12 (command -> SCREEN .)
    CONSTANTS       reduce using rule 12 (command -> SCREEN .)
    LIGHT           reduce using rule 12 (command -> SCREEN .)
    SHADING         reduce using rule 12 (command -> SCREEN .)
    CAMERA          reduce using rule 12 (command -> SCREEN .)
    GENERATE_RAYFILES reduce using rule 12 (command -> SCREEN .)
    MESH            reduce using rule 12 (command -> SCREEN .)
    SAVE_KNOBS      reduce using rule 12 (command -> SCREEN .)
    SAVE_COORDS     reduce using rule 12 (command -> SCREEN .)
    TWEEN           reduce using rule 12 (command -> SCREEN .)
    FOCAL           reduce using rule 12 (command -> SCREEN .)
    WEB             reduce using rule 12 (command -> SCREEN .)
    TEXTURE         reduce using rule 12 (command -> SCREEN .)
    $end            reduce using rule 12 (command -> SCREEN .)
    DOUBLE          shift and go to state 37

    NUMBER                         shift and go to state 36

state 7

    (13) command -> SAVE . TEXT TEXT
    (6) TEXT -> . SYMBOL
    (7) TEXT -> . STRING
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    STRING          shift and go to state 40
    XYZ             shift and go to state 41
    ID              shift and go to state 42

    TEXT                           shift and go to state 38
    SYMBOL                         shift and go to state 39

state 8

    (14) command -> DISPLAY .

    COMMENT         reduce using rule 14 (command -> DISPLAY .)
    POP             reduce using rule 14 (command -> DISPLAY .)
    PUSH            reduce using rule 14 (command -> DISPLAY .)
    SCREEN          reduce using rule 14 (command -> DISPLAY .)
    SAVE            reduce using rule 14 (command -> DISPLAY .)
    DISPLAY         reduce using rule 14 (command -> DISPLAY .)
    SPHERE          reduce using rule 14 (command -> DISPLAY .)
    TORUS           reduce using rule 14 (command -> DISPLAY .)
    BOX             reduce using rule 14 (command -> DISPLAY .)
    CYLINDER        reduce using rule 14 (command -> DISPLAY .)
    LINE            reduce using rule 14 (command -> DISPLAY .)
    MOVE            reduce using rule 14 (command -> DISPLAY .)
    SCALE           reduce using rule 14 (command -> DISPLAY .)
    ROTATE          reduce using rule 14 (command -> DISPLAY .)
    FRAMES          reduce using rule 14 (command -> DISPLAY .)
    BASENAME        reduce using rule 14 (command -> DISPLAY .)
    VARY            reduce using rule 14 (command -> DISPLAY .)
    SET             reduce using rule 14 (command -> DISPLAY .)
    SET_KNOBS       reduce using rule 14 (command -> DISPLAY .)
    AMBIENT         reduce using rule 14 (command -> DISPLAY .)
    CONSTANTS       reduce using rule 14 (command -> DISPLAY .)
    LIGHT           reduce using rule 14 (command -> DISPLAY .)
    SHADING         reduce using rule 14 (command -> DISPLAY .)
    CAMERA          reduce using rule 14 (command -> DISPLAY .)
    GENERATE_RAYFILES reduce using rule 14 (command -> DISPLAY .)
    MESH            reduce using rule 14 (command -> DISPLAY .)
    SAVE_KNOBS      reduce using rule 14 (command -> DISPLAY .)
    SAVE_COORDS     reduce using rule 14 (command -> DISPLAY .)
    TWEEN           reduce using rule 14 (command -> DISPLAY .)
    FOCAL           reduce using rule 14 (command -> DISPLAY .)
    WEB             reduce using rule 14 (command -> DISPLAY .)
    TEXTURE         reduce using rule 14 (command -> DISPLAY .)
    $end            reduce using rule 14 (command -> DISPLAY .)


state 9

    (15) command -> SPHERE . NUMBER NUMBER NUMBER NUMBER
    (16) command -> SPHERE . SYMBOL NUMBER NUMBER NUMBER NUMBER
    (17) command -> SPHERE . NUMBER NUMBER NUMBER NUMBER SYMBOL
    (18) command -> SPHERE . SYMBOL NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 37
    XYZ             shift and go to state 41
    ID              shift and go to state 42

    NUMBER                         shift and go to state 43
    SYMBOL                         shift and go to state 44

state 10

    (19) command -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER
    (20) command -> TORUS . NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (21) command -> TORUS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (22) command -> TORUS . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 37
    XYZ             shift and go to state 41
    ID              shift and go to state 42

    NUMBER                         shift and go to state 45
    SYMBOL                         shift and go to state 46

state 11

    (23) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (24) command -> BOX . NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (25) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER
    (26) command -> BOX . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID

    DOUBLE          shift and go to state 37
    XYZ             shift and go to state 41
    ID              shift and go to state 42

    NUMBER                         shift and go to state 47
    SYMBOL                         shift and go to state 48

state 12

    (27) command -> CYLINDER . NUMBER NUMBER NUMBER NUMBER NUMBER
    (28) command -> CYLINDER . NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (29) command -> CYLINDER . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER
    (30) command -> CYLINDER . SYMBOL NUMBER NUMBER NUMBER NUMBER NUMBER SYMBOL
    (8) NUMBER -> . DOUBLE
    (4) SYMBOL -> . XYZ
    (5) SYMBOL -> . ID
